<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.practice.derek.loancalculator.MainActivity"
    android:weightSum="1">


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_weight="0.05"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:text="@string/loan_amount"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_weight="0.98" />

        <EditText
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/loan_amount_hint" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:layout_weight="17.90" />

        <EditText
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/term_hint" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/yearly_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:layout_weight="1" />

        <EditText
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_weight="0.01"
            android:hint="@string/yearly_interest_hint" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05">

        <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_weight="1" />

        <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="0.39" />
    </LinearLayout>

    <TextView
        android:text="@string/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:layout_weight="0.05"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="57dp">

        <TextView
            android:text="@string/monthly_payment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView16"
            android:layout_weight="0.81" />

        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/monthly_payment_result"
            android:layout_weight="0.97"
            android:layout_width="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <TextView
            android:text="@string/total_payment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView18"
            android:layout_weight="0.60" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/total_payment_result"
            android:layout_weight="0.62" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <TextView
            android:text="@string/total_interest"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView21"
            android:layout_weight="0.60" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/total_interest_result"
            android:layout_weight="0.58" />
    </LinearLayout>

</LinearLayout>
